@@ -5,6 +5,9 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/06/23:
+- TestEngine: Fixed cases where DockInto() would fail if window is already docked.
+
 2023/06/22:
 - TestEngine: Fixed WindowClose() support when window Docked.
 
